--- a/DKYMN.ipynb
+++ b/DKYMN.ipynb
@@ -16,9 +16,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-r-PX6ao2BYs",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-r-PX6ao2BYs"
       },
       "source": [
         "import pandas as pd\n",
@@ -46,69 +44,55 @@
         "            )\n",
         "        )\n",
         "\n",
-        "    def datasetReturn(self, shuffle=None, batch_size=32, val_data=None):\n",
+        "        self.train = self.seq.sample(frac=0.8)\n",
+        "        self.test = self.seq[~self.seq.index.isin(self.train.index)]\n",
         "\n",
-        "        dataset = tf.data.Dataset.from_generator(lambda: self.seq, output_types=(tf.int32, tf.int32, tf.int32))\n",
+        "\n",
+        "    def datasetReturn(self, data, shuffle=None, batch_size=50, val_data=None):\n",
+        "        dataset = tf.data.Dataset.from_generator(lambda: data, output_types=(tf.int32, tf.int32, tf.int32))\n",
         "\n",
         "        if shuffle:\n",
         "            dataset = dataset.shuffle(buffer_size=shuffle)\n",
         "\n",
         "        MASK_VALUE = -1\n",
         "        dataset = dataset.padded_batch(\n",
-        "            batch_size=32,\n",
-        "            padding_values=( MASK_VALUE,MASK_VALUE, MASK_VALUE),\n",
-        "            padded_shapes=( [None], [None], [None]),\n",
+        "            batch_size=batch_size,\n",
+        "            padding_values=(MASK_VALUE, MASK_VALUE, MASK_VALUE),\n",
+        "            padded_shapes=([None], [None], [None]),\n",
         "            drop_remainder=True\n",
         "        )\n",
-        "        i = 0\n",
-        "        for l in dataset.as_numpy_iterator():\n",
-        "            i += 1\n",
         "\n",
-        "        test_size = int(np.ceil(i * 0.2))\n",
-        "        train_size = i - test_size\n",
-        "        val_size = int(np.ceil(i * 0.2))\n",
-        "\n",
-        "        test_data = dataset.take(test_size)\n",
-        "        dataset = dataset.skip(test_size)\n",
-        "\n",
-        "        val_data = dataset.take(val_size)\n",
-        "        dataset = dataset.skip(val_size)\n",
-        "\n",
-        "        return dataset, test_data, val_data"
+        "        return dataset"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7PtXsNbBGxbm",
-        "colab_type": "code",
-        "colab": {}
+        "id": "7PtXsNbBGxbm"
       },
       "source": [
         "ass = AssismentData()\n",
-        "train_data,test_data,val_data = ass.datasetReturn()\n",
+        "train_data,test_data = ass.datasetReturn(ass.train),ass.datasetReturn(ass.test)\n",
         "val_log = 'log/val'\n",
         "train_loss_log = 'log/train'\n",
         "summary_writer = tf.summary.create_file_writer(val_log)\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y6sM4qFdGymF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Y6sM4qFdGymF"
       },
       "source": [
         "\n",
         "total_skills_correctness = 200\n",
         "total_skills = 100\n",
         "embedding_size = 100\n",
-        "batchsize = 32\n",
+        "batchsize = 50\n",
         "M = 50\n",
         "class DKVMNcell(tf.keras.layers.AbstractRNNCell):\n",
         "    def __init__(self, units, **kwargs):\n",
@@ -131,10 +115,10 @@
         "        :return: r，Mv\n",
         "        \"\"\"\n",
         "        # 读\n",
-        "        # print(w_attention.shape)(32,50) state (32,50,100)\n",
+        "        # w_attention.shape (50,50) state.shape (50,50,100)\n",
         "        r = tf.matmul(tf.expand_dims(w_attention,axis=1),states)\n",
         "        \n",
-        "        # print(r.shape)(1,32,100)\n",
+        "        # print(r.shape)(50,1,100)\n",
         "        r = r[:,0,:]\n",
         "        \n",
         "        # 写\n",
@@ -172,24 +156,22 @@
         "        skillid = self.mask(skillid)\n",
         "        skill_correctness = self.mask(skill_correctness)\n",
         "        # 映射\n",
-        "        #skill_correctness_embedding = self.exercise_correctness_embedding(skill_correctness)\n",
-        "        #print(skill_correctness_embedding)\n",
         "        skill_embedding = self.exercise_embedding(skillid)\n",
-        "        skill_correctness_embedding = self.exercise_correctness_embedding(tf.cast(skill_correctness/2,tf.int32))\n",
-        "        skill_correctness_embedding = tf.squeeze(skill_correctness_embedding, axis=2)\n",
-        "        tensorlist = tf.TensorArray(dtype=tf.float32,size=0,dynamic_size=True)\n",
-        "        tensorlist_batch = tf.TensorArray(dtype=tf.float32,size=0,dynamic_size=True)\n",
-        "        for k in range(skill_correctness_embedding.shape[0]):\n",
-        "          tensorlist = tf.TensorArray(tf.float32,size=0,dynamic_size=True)\n",
-        "          for i in range(skill_correctness_embedding.shape[1]):\n",
-        "            w=tensorlist.write(i,tf.cond(correctness[k,i],lambda:tf.zeros_like(skill_correctness_embedding[k,i]),lambda:tf.ones_like(skill_correctness_embedding[k,i])))\n",
-        "            w.mark_used()\n",
-        "          w=tensorlist_batch.write(k,tensorlist.stack())\n",
-        "          w.mark_used()\n",
-        "        skill_correctness_embedding = tf.concat([skill_correctness_embedding,tensorlist_batch.stack()],axis=-1)\n",
-        "        \n",
+        "        skill_correctness_embedding = self.exercise_correctness_embedding(skill_correctness) #（batch,seqlen,embeddingsize）\n",
+        "        skill_correctness_embedding = tf.squeeze(skill_correctness_embedding, axis=2) \n",
         "        skill_embedding = tf.squeeze(skill_embedding, axis=2)\n",
-        "        #skill_correctness_embedding = tf.squeeze(skill_correctness_embedding, axis=2)\n",
+        "        # tensorlist_batch = tf.TensorArray(dtype=tf.float32,size=0,dynamic_size=True)\n",
+        "        # for k in range(skill_correctness_embedding.shape[0]):\n",
+        "        #   tensorlist = tf.TensorArray(tf.float32,size=0,dynamic_size=True)\n",
+        "        #   for i in range(skill_correctness_embedding.shape[1]):\n",
+        "        #     # 做对拼接1 ，做错拼接0\n",
+        "        #     w=tensorlist.write(i,tf.cond(correctness[k,i],lambda:tf.zeros_like(skill_correctness_embedding[k,i]),lambda:tf.ones_like(skill_correctness_embedding[k,i])))\n",
+        "        #     w.mark_used()\n",
+        "        #   w=tensorlist_batch.write(k,tensorlist.stack())\n",
+        "        #   w.mark_used()\n",
+        "        # # 拼接后skill_correctness_embedding\n",
+        "        # skill_correctness_embedding = tf.concat([skill_correctness_embedding,tensorlist_batch.stack()],axis=-1)\n",
+        "        \n",
         "        # 产生 注意力权重\n",
         "        w_attention = tf.matmul(skill_embedding, tf.expand_dims(tf.transpose(self.Mk), axis=0))\n",
         "        w_attention = tf.nn.softmax(w_attention)\n",
@@ -201,6 +183,7 @@
         "        erase_signal_mul = 1 - tf.expand_dims(w_attention, axis=-1) * tf.expand_dims(erase_signal, axis=2)\n",
         "        add_signal_mul = tf.expand_dims(w_attention, axis=-1) * tf.expand_dims(add_signal, axis=2)\n",
         "        # 遗忘和更新Mv\n",
+        "        # batch个 Mv\n",
         "        states = self.cell.Mv\n",
         "        for i in range(batchsize)[1:]:\n",
         "          states = tf.concat([states,self.cell.Mv],axis=0)\n",
@@ -220,15 +203,13 @@
         "        return loss\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2iMISTOLKFmL",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2iMISTOLKFmL"
       },
       "source": [
         "\n",
@@ -243,8 +224,6 @@
         "    label = tf.boolean_mask(correctness, mask)\n",
         "\n",
         "    label = tf.one_hot(label, depth=2)\n",
-        "\n",
-        "    #probility = tf.concat([tf.zeros_like(probility), probility], axis=1)\n",
         "   \n",
         "    vauc.update_state(label,probility)\n",
         "\n",
@@ -263,49 +242,39 @@
         "\n",
         "        loss = tf.losses.categorical_crossentropy(label,probility)\n",
         "       \n",
-        "        #probility = tf.concat([tf.zeros_like(probility), probility], axis=1)\n",
-        "        # 求 auc\n",
-        "        # print(dkvmn.Mk)\n",
-        "        # print(dkvmn.cell.Mv)\n",
         "        auc.update_state(label,probility)\n",
         "        \n",
         "        gradients = tape.gradient(loss, dkvmn.trainable_variables)\n",
         "        # 反向传播，自动微分计算\n",
         "        optimizer.apply_gradients(zip(gradients, dkvmn.trainable_variables))\n"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Llj2Gnc_Joel",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Llj2Gnc_Joel"
       },
       "source": [
         "dkvmn = DKVMN()\n",
         "bc = tf.metrics.CategoricalCrossentropy()\n",
         "auc = tf.metrics.AUC()\n",
         "vauc = tf.metrics.AUC()\n",
-        "optimizer = tf.optimizers.Adam(learning_rate=0.001)"
+        "optimizer = tf.optimizers.Adam(learning_rate=0.01)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QNJGTP9XJpvX",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "737b3b2e-4cb3-442b-ca59-f568e442ae76"
+        "id": "QNJGTP9XJpvX"
       },
       "source": [
-        "for epoch in range(5):\n",
+        "import time\n",
+        "for epoch in range(10):\n",
+        "    start = time.time()\n",
         "    train_data = train_data.shuffle(32)\n",
         "    auc.reset_states()\n",
         "    vauc.reset_states()\n",
@@ -313,9 +282,9 @@
         "    for  s, v, l in train_data.as_numpy_iterator():\n",
         "        train_one_step(s, v, l)\n",
         "\n",
-        "    for s, v, l in val_data.as_numpy_iterator():\n",
+        "    for s, v, l in test_data.as_numpy_iterator():\n",
         "        test_one_step(s, v, l)\n",
-        "    print(dkvmn.cell.Mv)\n",
+        "    print(time.time()-start)\n",
         "    with summary_writer.as_default():\n",
         "        tf.summary.scalar('train_auc', auc.result(), step=epoch)\n",
         "        tf.summary.scalar('val_auc', vauc.result(), step=epoch)\n",
@@ -323,100 +292,17 @@
         "    print(bc.result(), auc.result(), vauc.result())"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "tf.Tensor(\n",
-            "[[[-0.0501091  -0.00686803  0.01138464 ... -0.03902313 -0.00610312\n",
-            "    0.02252177]\n",
-            "  [ 0.03213963  0.05132752  0.01032587 ...  0.06699969  0.05205045\n",
-            "   -0.0160228 ]\n",
-            "  [-0.11225867  0.03490091  0.01659493 ...  0.0085859  -0.07784661\n",
-            "   -0.01775018]\n",
-            "  ...\n",
-            "  [ 0.05060253  0.04744339 -0.01064355 ...  0.02177147 -0.01593327\n",
-            "   -0.03493347]\n",
-            "  [-0.08958747  0.09277599 -0.01870047 ... -0.08668229 -0.08171516\n",
-            "   -0.00507337]\n",
-            "  [-0.0221012  -0.00024011 -0.07169972 ... -0.03059022 -0.09510239\n",
-            "    0.01010598]]], shape=(1, 50, 100), dtype=float32)\n",
-            "tf.Tensor(0.6044991, shape=(), dtype=float32) tf.Tensor(0.7389469, shape=(), dtype=float32) tf.Tensor(0.75183535, shape=(), dtype=float32)\n",
-            "tf.Tensor(\n",
-            "[[[-0.0501091  -0.00686803  0.01138464 ... -0.03902313 -0.00610312\n",
-            "    0.02252177]\n",
-            "  [ 0.03213963  0.05132752  0.01032587 ...  0.06699969  0.05205045\n",
-            "   -0.0160228 ]\n",
-            "  [-0.11225867  0.03490091  0.01659493 ...  0.0085859  -0.07784661\n",
-            "   -0.01775018]\n",
-            "  ...\n",
-            "  [ 0.05060253  0.04744339 -0.01064355 ...  0.02177147 -0.01593327\n",
-            "   -0.03493347]\n",
-            "  [-0.08958747  0.09277599 -0.01870047 ... -0.08668229 -0.08171516\n",
-            "   -0.00507337]\n",
-            "  [-0.0221012  -0.00024011 -0.07169972 ... -0.03059022 -0.09510239\n",
-            "    0.01010598]]], shape=(1, 50, 100), dtype=float32)\n",
-            "tf.Tensor(0.5828626, shape=(), dtype=float32) tf.Tensor(0.7739383, shape=(), dtype=float32) tf.Tensor(0.76222515, shape=(), dtype=float32)\n",
-            "tf.Tensor(\n",
-            "[[[-0.0501091  -0.00686803  0.01138464 ... -0.03902313 -0.00610312\n",
-            "    0.02252177]\n",
-            "  [ 0.03213963  0.05132752  0.01032587 ...  0.06699969  0.05205045\n",
-            "   -0.0160228 ]\n",
-            "  [-0.11225867  0.03490091  0.01659493 ...  0.0085859  -0.07784661\n",
-            "   -0.01775018]\n",
-            "  ...\n",
-            "  [ 0.05060253  0.04744339 -0.01064355 ...  0.02177147 -0.01593327\n",
-            "   -0.03493347]\n",
-            "  [-0.08958747  0.09277599 -0.01870047 ... -0.08668229 -0.08171516\n",
-            "   -0.00507337]\n",
-            "  [-0.0221012  -0.00024011 -0.07169972 ... -0.03059022 -0.09510239\n",
-            "    0.01010598]]], shape=(1, 50, 100), dtype=float32)\n",
-            "tf.Tensor(0.5786171, shape=(), dtype=float32) tf.Tensor(0.77855027, shape=(), dtype=float32) tf.Tensor(0.7645862, shape=(), dtype=float32)\n",
-            "tf.Tensor(\n",
-            "[[[-0.0501091  -0.00686803  0.01138464 ... -0.03902313 -0.00610312\n",
-            "    0.02252177]\n",
-            "  [ 0.03213963  0.05132752  0.01032587 ...  0.06699969  0.05205045\n",
-            "   -0.0160228 ]\n",
-            "  [-0.11225867  0.03490091  0.01659493 ...  0.0085859  -0.07784661\n",
-            "   -0.01775018]\n",
-            "  ...\n",
-            "  [ 0.05060253  0.04744339 -0.01064355 ...  0.02177147 -0.01593327\n",
-            "   -0.03493347]\n",
-            "  [-0.08958747  0.09277599 -0.01870047 ... -0.08668229 -0.08171516\n",
-            "   -0.00507337]\n",
-            "  [-0.0221012  -0.00024011 -0.07169972 ... -0.03059022 -0.09510239\n",
-            "    0.01010598]]], shape=(1, 50, 100), dtype=float32)\n",
-            "tf.Tensor(0.5759482, shape=(), dtype=float32) tf.Tensor(0.78083616, shape=(), dtype=float32) tf.Tensor(0.7603403, shape=(), dtype=float32)\n",
-            "tf.Tensor(\n",
-            "[[[-0.0501091  -0.00686803  0.01138464 ... -0.03902313 -0.00610312\n",
-            "    0.02252177]\n",
-            "  [ 0.03213963  0.05132752  0.01032587 ...  0.06699969  0.05205045\n",
-            "   -0.0160228 ]\n",
-            "  [-0.11225867  0.03490091  0.01659493 ...  0.0085859  -0.07784661\n",
-            "   -0.01775018]\n",
-            "  ...\n",
-            "  [ 0.05060253  0.04744339 -0.01064355 ...  0.02177147 -0.01593327\n",
-            "   -0.03493347]\n",
-            "  [-0.08958747  0.09277599 -0.01870047 ... -0.08668229 -0.08171516\n",
-            "   -0.00507337]\n",
-            "  [-0.0221012  -0.00024011 -0.07169972 ... -0.03059022 -0.09510239\n",
-            "    0.01010598]]], shape=(1, 50, 100), dtype=float32)\n",
-            "tf.Tensor(0.574886, shape=(), dtype=float32) tf.Tensor(0.78187454, shape=(), dtype=float32) tf.Tensor(0.76611847, shape=(), dtype=float32)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "EOmWNlI__wb3",
-        "colab_type": "code",
+        "outputId": "2922a80f-c48a-4f88-e585-c74fd0025917",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "2922a80f-c48a-4f88-e585-c74fd0025917"
+        }
       },
       "source": [
         "vauc.reset_states()\n",
